also renamed Openshift to S2I

--- a/docs/dev/experimental-mode.adoc
+++ b/docs/dev/experimental-mode.adoc
@@ -24,11 +24,11 @@ odo preference set experimental true
 #### Working with experimental mode:
 
 ##### Listing devfile components:
-When the experimental mode is enabled, `odo catalog list components` will list the devfile components alongside the OpenShift components.
+When the experimental mode is enabled, `odo catalog list components` will list the devfile components alongside the S2I components.
 
 ```
 $ odo catalog list components
-Odo OpenShift Components:
+Odo S2I Components:
 NAME                       PROJECT       TAGS                                        SUPPORTED
 nodejs                     openshift     10,8,8-RHOAR,latest                         YES
 codewind-odo-openjdk18     che           latest                                      YES
