--- a/docs/public/deploying-a-devfile-using-odo.adoc
+++ b/docs/public/deploying-a-devfile-using-odo.adoc
@@ -77,7 +77,7 @@ Ingress IP is usually the external IP of ingress controller service. For example
   java-springboot      Spring Boot® using Java                DefaultDevfileRegistry
   nodejs               Stack with NodeJS 12                   DefaultDevfileRegistry
 
-  Odo OpenShift Components:
+  Odo S2I Components:
   NAME        PROJECT       TAGS                                                                           SUPPORTED
   java        openshift     11,8,latest                                                                    YES
   dotnet      openshift     2.1,3.1,latest                                                                 NO
