--- a/docs/public/deploying-a-devfile-using-odo.adoc
+++ b/docs/public/deploying-a-devfile-using-odo.adoc
@@ -29,29 +29,50 @@ An example deployment scenario:
 
 == Deploying your first devfile
 
-===== Prerequisites for a Kubernetes Cluster
+=== Ingress Setup 
 
-* Before proceeding, you must know your ingress domain name or ingress IP to specify `--host` for `odo url create`.
-+
-Ingress IP is usually the external IP of ingress controller service. For example, for Minikube running in a virtual machine you can get it by
-`minikube ip`. Checkout this https://kubernetes.io/docs/concepts/services-networking/ingress/[document] to know more about ingress.
+You will need to provide an ingress domain name for the services you create with odo, which you will specify via the `--host` argument with `odo url create`.
 
-===== Prerequisites for an OpenShift Cluster
+An easy way to do this is to use the https://nip.io/[nip.io] service to create host names mapping to the external IP of your ingress controller service. 
 
-* Create a project to keep your source code, tests, and libraries organized in a separate single unit.
-* You must also know your ingress domain name or ingress IP to specify `--host` for `odo url create`. This can be found using `crc ip`.
-+
-Ingress IP is usually the external IP of ingress controller service. For example, for link:https://developers.redhat.com/products/codeready-containers/overview[CodeReady Containers] running in a virtual machine you can get it by
-`crc ip`. Checkout this https://kubernetes.io/docs/concepts/services-networking/ingress/[document] to know more about ingress.
+In the commands below we assume you are using the https://nip.io/[nip.io] service and https://minikube.sigs.k8s.io/docs/[minikube], e.g.: 
 
-. Log in to an OpenShift cluster:
+[source,sh]
+----
+  $ odo url create --host $(minikube ip).nip.io
+----
+
+===== Minikube Cluster Ingress Setup
+
+Enable the ingress addon in minikube. 
+
+[source,sh]
+----
+  $ minikube addons enable ingress
+----
+
+With Minikube running in a virtual machine, the ingress controller IP address is obtained via `minikube ip` (the value is `192.168.99.100` in the sample output shown below).
+
+===== OpenShift Cluster Ingress Setup
+
+For link:https://developers.redhat.com/products/codeready-containers/overview[CodeReady Containers] running in a virtual machine, for example, you can get it by `crc ip`.
+Note you might not need to use the ingress in OpenShift, where you can use routes instead.
+
+===== Ingress Notes
+
+Of course there are other options but this approach avoids the need to edit the `/etc/hosts/` file with each created service URL.
+
+Checkout this https://kubernetes.io/docs/concepts/services-networking/ingress/[document] to know more about ingress.
+
+=== First Steps
+
+* Login to your cluster (unnecessary if you've used other standard methods, e.g. kubectl to establish the current context)
 +
 [source,sh]
 ----
   $ odo login -u developer -p developer
 ----
-
-. Create a project:
+* Create a project to keep your source code, tests, and libraries organized in a separate single unit.
 +
 [source,sh]
 ----
@@ -139,8 +160,8 @@ NOTE: If deploying on OpenShift, you can skip this step and a Route will be crea
 +
 [source,sh]
 ----
- $ odo url create  --host example.com
-  ✓  URL myspring-8080.example.com created for component: myspring
+ $ odo url create  --host $(minikube ip).nip.io
+  ✓  URL myspring-8080.192.168.99.100.nip.io created for component: myspring
 
  To apply the URL configuration changes, please use odo push
 ----
@@ -159,7 +180,7 @@ NOTE: If deploying on OpenShift, you can skip this step and a Route will be crea
    ✓  Waiting for component to start [5s]
 
   Applying URL changes
-   ✓  URL myspring-8080: http://myspring-8080.example.com created
+   ✓  URL myspring-8080: http://myspring-8080.192.168.99.100.nip.io created
 
   Syncing to component myspring
    ✓  Checking files for pushing [2ms]
@@ -180,14 +201,14 @@ NOTE: If deploying on OpenShift, you can skip this step and a Route will be crea
  $ odo url list
  Found the following URLs for component myspring
  NAME              URL                                       PORT     SECURE
- myspring-8080     http://myspring-8080.example.com     8080     false
+ myspring-8080     http://myspring-8080.192.168.99.100.nip.io     8080     false
 ----
 
 . View your deployed application using the generated URL:
 +
 [source,sh]
 ----
-  $ curl http://myspring-8080.example.com
+  $ curl http://myspring-8080.$(minikube ip).nip.io
 ----
 
 . To delete your deployed application:
@@ -246,8 +267,8 @@ NOTE: If deploying on OpenShift, you can skip this step and a Route will be crea
 +
 [source,sh]
 ----
- $ odo url create --host example.com
-  ✓  URL mynodejs-8080.example.com created for component: mynodejs
+ $ odo url create --host $(minikube ip).nip.io
+  ✓  URL mynodejs-8080.192.168.99.100.nip.io created for component: mynodejs
 
  To apply the URL configuration changes, please use odo push
 ----
@@ -266,7 +287,7 @@ NOTE: If deploying on OpenShift, you can skip this step and a Route will be crea
    ✓  Waiting for component to start [3s]
 
   Applying URL changes
-   ✓  URL mynodejs-3000: http://mynodejs-3000.example.com created
+   ✓  URL mynodejs-3000: http://mynodejs-3000.192.168.99.100.nip.io created
 
   Syncing to component mynodejs
    ✓  Checking files for pushing [2ms]
@@ -286,15 +307,15 @@ NOTE: If deploying on OpenShift, you can skip this step and a Route will be crea
 ----
  $ odo url list
      Found the following URLs for component mynodejs
-     NAME              URL                                       PORT     SECURE
-     mynodejs-8080     http://mynodejs-8080.example.com     8080     false
+     NAME              URL                                            PORT     SECURE
+     mynodejs-8080     http://mynodejs-8080.192.168.99.100.nip.io     8080     false
 ----
 
 . View your deployed application using the generated URL:
 +
 [source,sh]
 ----
-   $ curl http://mynodejs-8080.example.com
+   $ curl http://mynodejs-8080.$(minikube ip).nip.io
 ----
 
 . To delete your deployed application:
@@ -338,8 +359,8 @@ NOTE: If deploying on OpenShift, you can skip this step and a Route will be crea
 +
 [source,sh]
 ----
- $ odo url create  --host example.com
-  ✓  URL myquarkus-8080.example.com created for component: myquarkus
+ $ odo url create  --host $(minikube ip).nip.io
+  ✓  URL myquarkus-8080.192.168.99.100.nip.io created for component: myquarkus
 
  To apply the URL configuration changes, please use odo push
 ----
@@ -379,8 +400,8 @@ Pushing devfile component myquarkus
 ----
  $ odo url list
  Found the following URLs for component myspring
- NAME              URL                                       PORT     SECURE
- myquarkus-8080     http://myquarkus-8080.example.com     8080     false
+ NAME              URL                                              PORT     SECURE
+ myquarkus-8080     http://myquarkus-8080.192.168.99.100.nip.io     8080     false
 ----
 
 You can now continue developing your application. Just run `odo push` and refresh your browser to view the latest changes.
@@ -430,7 +451,7 @@ NOTE: If deploying on OpenShift, you can skip this step and a Route will be crea
 +
 [source,sh]
 ----
- $ odo url create --host example.com
+ $ odo url create --host $(minikube ip).nip.io
   ✓  URL myopenliberty-9080 created for component: myopenliberty
 
  To apply the URL configuration changes, please use odo push
@@ -462,25 +483,31 @@ Pushing devfile component myopenliberty
 
 ----
 
-. View your deployed application in a browser using the generated url
+. List the URLs of the component
 +
 [source,sh]
 ----
  $ odo url list
   Found the following URLs for component myopenliberty
-  NAME                STATE      URL                                       PORT     SECURE
-  myopenliberty-9     Pushed     http://myopenliberty-9.example.com        9080     false
+  NAME                STATE      URL                                                 PORT     SECURE
+  myopenliberty-9     Pushed     http://myopenliberty-9.192.168.99.100.nip.io        9080     false
 ----
 
-
-. Have odo watch for changes in the source code
+. View your deployed application using the generated URL (this example shows an ingress hostname URL, while an OpenShift route would look a bit different):
++
+[source,sh]
+----
+ $ curl http://myopenliberty-9.$(minikube ip).nip.io/api/resource
+----
++
+. Have odo watch for changes in the source code:
 +
 [source,sh]
 ----
  $ odo watch
 ----
 
-You can now continue developing your application. Just refreshing the browser will render the source code changes.
+You can now continue developing your application. Refreshing the browser or hitting the endpoint again will render the source code changes.
 
 You can also trigger `odo watch` with custom devfile build, run and debug commands.
 
